--- a/checkliste.html
+++ b/checkliste.html
@@ -130,7 +130,7 @@
                                 <div class="modal-dialog modal-dialog-centered">
                                     <div class="modal-content bg-graa">
                                         <div class="modal-header">
-                                            <h1 class="modal-title fs-5 text-hvid" id="exampleModalLabel">Købte ind med eget net</h1>
+                                            <h1 class="modal-title fs-5 text-hvid" id="exampleModalnet">Købte ind med eget net</h1>
                                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                         </div>
                                         <div class="modal-body text-hvid">
@@ -138,7 +138,7 @@
                                                 eller tag din egen drikkedunk med dig, for at undgå enegangs plastik.</p>
                                         </div>
                                         <div class="modal-header">
-                                            <h1 class="modal-title fs-5 text-hvid" id="exampleModalLabel">Jeg gik/cyklede i dag </h1>
+                                            <h1 class="modal-title fs-5 text-hvid" id="exampleModalgik">Jeg gik/cyklede i dag </h1>
                                         </div>
                                         <div class="modal-body text-hvid">
                                             <p>Hvis det er muligt, bør du overveje at cykle eller gå. Sådan sparer du brændstof og penge,
