--- a/underside.html
+++ b/underside.html
@@ -72,11 +72,8 @@
 <br>
 <div>
     <div class="d-grid gap-2 col-lg-5 col-md-8 col-sm-8 mx-auto">
-        <a href="checkliste.html">
-        <button class="btn btn-groen text-hvid btn-lg ms-5 me-5 fs-4" type="button">
-            Dagens klimamissioner
-        </button>
-        </a>
+
+            <a href="checkliste.html" type="button" class="btn btn-groen text-hvid btn-lg ms-5 me-5 fs-4">Dagens klimamissioner </a>
     </div>
 </div>
 
