--- a/Planet A.html
+++ b/Planet A.html
@@ -27,59 +27,69 @@
         </a>
     </div>
 </div>
-<header>
-<div class="container-fluid d-flex justify-content-lg-center justify-content-md-center">
-    <div class="row ">
-        <div class="col-12 overskrift d-flex ms-lg-0 ms-md-3 ms-sm-5">
-            <h1 class="overskrift text-hvid display-1 d-flex mt-0 mb-3 pt-2" style="font-size: clamp(3rem, 8vw, 25rem);">
-                Velkommen til <br class="d-sm-none"> Planet A
-            </h1>
-        </div>
-    </div>
-</div>
-</header>
-<div class="container justify-content-lg-center">
 
-    <div class="row">
-        <article class="col-lg-8 col-md-8 col-sm-12">
-            <h4 class="tekst text-hvid ms-lg-3">
-                Vær med til at passe på vores planet, der er kun en! <br> <br>
+
+</div>
+
+
+
+
+
+<div class="container">
+    <header>
+        <div class="row">
+            <div class="col-12 overskrift">
+                <h1 class="overskrift text-hvid display-1 d-flex mt-0 mb-3 pt-2" style="font-size: clamp(3rem, 8vw, 25rem);">
+                    Velkommen til <br class="d-sm-none"> Planet A
+                </h1>
+            </div>
+        </div>
+    </header>
+
+    <div class="row w-100 justify-content-center">
+        <article class="col-12 col-md-8 col-lg-8">
+            <h4 class="tekst text-hvid ">
+                Vær med til at passe på vores planet, der er kun en! <br><br>
                 Planet A giver dig mulighed for at få større viden om hvordan vi kan passe på miljøet.
-                Du får uddelt din egen planet, som du har ansvaret for at gøre grønnere og gladere!<br> <br>
+                Du får uddelt din egen planet, som du har ansvaret for at gøre grønnere og gladere!<br><br>
                 Du får en overskuelig tjekliste med daglige klimamissioner,
                 der gør en forskel i din hverdag og hjælper dig med at blive mere miljøbevidst. Fuldfør missionerne, tjek dem af, optjen point,
                 og se din planet trives som resultat af dine klimavenlige handlinger.<br><br>
-                <a href="" class="text-orange">
-                Se vores video
-                </a>
-
+                <a href="" class="Se text-orange">Se vores video</a>
             </h4>
         </article>
-
-
-        <section class="col-lg-4 col-md-4 col-sm-12 d-flex flex-xl-column flex-lg-column flex-md-column flex-sm-row justify-content-center align-items-center">
-            <a href="underside.html">
-                <button class="btn btn-groen text-hvid ms-lg-5 fs-4 ps-lg-4 pe-lg-4 pt-lg-3 pb-lg-3 mb-lg-5 ps-md-3 pe-md-3 pt-md-3 pb-md-3 mb-md-5 m-sm-4 m-2" type="button">Opret Profil</button>
-            </a>
-
-            <a href="underside.html">
-                <button class="btn btn-blaa text-hvid ms-lg-5 fs-4 ps-lg-5 pe-lg-5 pt-lg-3 pb-lg-3 ps-md-5 pe-md-5 pt-md-3 pb-md-3 mb-md-5 m-sm-4 m-2" type="button">Log ind </button>
-            </a>
+        <section class="col-12 col-md-4 col-lg-4 ">
+            <div class="row ">
+                <div class="col-6 col-md-12 text-center">
+                    <a href="opret.html">
+                        <button class="btn btn-groen text-hvid fs-4 ps-lg-4 pe-lg-4 pt-lg-3 pb-lg-3 ps-md-3 pe-md-3 pt-md-3 pb-md-3 mb-md-5 m-sm-4 m-2" type="button">Opret Profil</button>
+                    </a>
+                </div>
+                <div class="col-6 col-md-12 text-center">
+                    <a href="underside.html">
+                        <button class="btn btn-blaa text-hvid fs-4 ps-lg-5 pe-lg-5 pt-lg-3 pb-lg-3 ps-md-5 pe-md-5 pt-md-3 pb-md-3 mb-md-5 m-sm-4 m-2" type="button">Log ind</button>
+                    </a>
+                </div>
+            </div>
         </section>
     </div>
+
 </div>
 
 <footer class="container-fluid">
     <div class="row">
         <div class="col-6">
-            <h6 class="text-hvid mt-4 fw-light">Databeskyttelse</h6>
+            <h6 class="text-hvid mt-3 fw-light">
+                <a href="" class="data link-underline-hvid text-hvid">Databeskyttelse</a>
+            </h6>
         </div>
         <div class="col-6">
-            <h6 class="text-hvid mt-4 fw-light justify-content-end d-flex">Kontakt</h6>
+            <h6 class="text-hvid mt-3 fw-light justify-content-end d-flex">
+                <a href="" class="Kontakt link-underline-hvid text-hvid">Kontakt</a></h6>
         </div>
     </div>
 </footer>
-</div>
+
 
 
 
