--- a/checkliste.html
+++ b/checkliste.html
@@ -22,7 +22,9 @@
             <a href="#">
                 <img src="image/logolille.webp" alt="logo">
             </a>
-            <!-- Synlig knap indtil 500px i midten af navbar -->
+
+            <button type="button" id="planet-btn" class="btn btn-outline-graa text-hvid btn-lg">Den grønne vej</button>
+
             <button type="button" id="planet-btn" class="btn btn-outline-graa text-hvid btn-lg">Hjælp din planet</button>
 
             <!-- Navbar-toggler -->
@@ -51,6 +53,9 @@
                         <!-- Hjælp din planet knap flyttes dynamisk til dropdown her -->
                         <li class="nav-item">
                             <button class="btn btn-outline-grå text-hvid planet-menu-btn fs-4" style="display: none;">Hjælp din planet</button>
+                        </li>
+                        <li class="nav-item">
+                            <button class="btn btn-outline-grå text-hvid planet-menu-btn fs-4 mt-2" style="display: none;">Den grønne vej</button>
                         </li>
                     </ul>
                 </div>
