--- a/opret.html
+++ b/opret.html
@@ -26,10 +26,10 @@
 
     <div class="row">
 
-        <div class="d-none d-lg-block col-lg-6 position-relative">
-            <div>
-                <a href="Planet%20A.html"><img src="image/logoopret.webp" alt="logo" class="position-absolute m-5" style="width: 500px; height: 563px;"></a>
-            </div>
+        <div class="d-none d-lg-block col-12 col-lg-6 text-center">
+
+                <a href="Planet%20A.html"><img src="image/logoopret.webp" alt="logo" style="width: 500px; height: 563px;"></a>
+
         </div>
 
         <div class="col-12 col-lg-6">
