--- a/underside.html
+++ b/underside.html
@@ -21,6 +21,8 @@
             <a href="#">
                 <img src="image/logolille.webp" alt="logo">
             </a>
+
+            <button type="button" id="planet-btn" class="btn btn-outline-graa text-hvid btn-lg">Den grønne vej</button>
             <!-- Synlig knap indtil 500px i midten af navbar -->
             <button type="button" id="planet-btn" class="btn btn-outline-graa text-hvid btn-lg">Hjælp din planet</button>
 
@@ -49,6 +51,9 @@
                                 <!-- Hjælp din planet knap flyttes dynamisk til dropdown her -->
                                 <li class="nav-item">
                                     <button class="btn btn-outline-grå text-hvid planet-menu-btn fs-4" style="display: none;">Hjælp din planet</button>
+                                </li>
+                                <li class="nav-item">
+                                    <button class="btn btn-outline-grå text-hvid planet-menu-btn fs-4 mt-2" style="display: none;">Den grønne vej</button>
                                 </li>
                             </ul>
                         </div>
