--- a/Planet A.html
+++ b/Planet A.html
@@ -55,7 +55,8 @@
                 Du får en overskuelig tjekliste med daglige klimamissioner,
                 der gør en forskel i din hverdag og hjælper dig med at blive mere miljøbevidst. Fuldfør missionerne, tjek dem af, optjen point,
                 og se din planet trives som resultat af dine klimavenlige handlinger.<br><br>
-                <a href="" class="Se text-orange">Se vores video</a>
+                <a href="image/PlanetAyoutube.mp4" class="Se text-orange">Se vores video</a>
+
             </h4>
         </article>
         <section class="col-12 col-md-4 col-lg-4 ">
