--- a/checkliste.html
+++ b/checkliste.html
@@ -8,10 +8,11 @@
     <meta name="copyright" content="Information om copyright">
 
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-
+    <link rel="stylesheet" href="https://use.typekit.net/fzx5twy.css">
+    <link rel="stylesheet" href="https://use.typekit.net/tvt8pmf.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="https://use.typekit.net/fzx5twy.css">
+
 </head>
 <body class="bg-bgfarve baggrund">
 
@@ -23,7 +24,7 @@
                 <img src="image/logolille.webp" alt="logo">
             </a>
 
-            <button type="button" id="planet-btn" class="btn btn-outline-graa text-hvid btn-lg">Den grønne vej</button>
+            <button type="button" id="planet-btn" class="btn btn-outline-graa text-hvid btn-lg"><a href="Infografik.html" class="text-hvid">Den grønne vej</a></button>
 
             <button type="button" id="planet-btn" class="btn btn-outline-graa text-hvid btn-lg">Hjælp din planet</button>
 
@@ -55,7 +56,9 @@
                             <button class="btn btn-outline-grå text-hvid planet-menu-btn fs-4" style="display: none;">Hjælp din planet</button>
                         </li>
                         <li class="nav-item">
-                            <button class="btn btn-outline-grå text-hvid planet-menu-btn fs-4 mt-2" style="display: none;">Den grønne vej</button>
+                            <button class="btn btn-outline-grå text-hvid planet-menu-btn fs-4 mt-2" style="display: none;">
+                                <a href="Infografik.html" class="text-hvid">Den grønne vej</a>
+                            </button>
                         </li>
                     </ul>
                 </div>
@@ -77,7 +80,7 @@
             </div>
 
             <!-- Højre sektion -->
-            <div class="col-md-6" style="margin-top:70px;">
+            <div class="col-md-6 tekst" style="margin-top:70px;">
                 <!-- Overskrift kort -->
                 <div class="card mb-3 justify-content-center" style="border: none;">
                     <div class="card-body bg-graa">
@@ -86,7 +89,7 @@
                 </div>
 
                 <!-- Checkliste -->
-                <div class="card" style="border: none;">
+                <div class="card " style="border: none;">
                     <div class="card-body bg-graa">
                         <!-- Klimamissioner -->
                         <ul class="list-group">
