--- a/underside.html
+++ b/underside.html
@@ -8,27 +8,31 @@
     <meta name="author" content="Udgiver">
     <meta name="copyright" content="Information om copyright">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="https://use.typekit.net/fzx5twy.css">
+    <link rel="stylesheet" href="https://use.typekit.net/tvt8pmf.css">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
 
 </head>
 
 <body class="bg-bgfarve baggrund">
-<div class="container">
+<div class="container tekst">
     <nav class="navbar navbar-dark bg-bgfarve fixed-top border-white" style="border-bottom: 2px solid white;">
         <div class="container-fluid">
             <a href="#">
                 <img src="image/logolille.webp" alt="logo">
             </a>
 
-            <button type="button" id="planet-btn" class="btn btn-outline-graa text-hvid btn-lg">Den grønne vej</button>
-            <!-- Synlig knap indtil 500px i midten af navbar -->
+            <button type="button" id="planet-btn" class="btn btn-outline-graa text-hvid btn-lg"><a href="Infografik.html" class="text-hvid">Den grønne vej</a></button>
+
             <button type="button" id="planet-btn" class="btn btn-outline-graa text-hvid btn-lg">Hjælp din planet</button>
 
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <!-- Offcanvas menu til dropdown -->
+
                     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
                             aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -53,7 +57,7 @@
                                     <button class="btn btn-outline-grå text-hvid planet-menu-btn fs-4" style="display: none;">Hjælp din planet</button>
                                 </li>
                                 <li class="nav-item">
-                                    <button class="btn btn-outline-grå text-hvid planet-menu-btn fs-4 mt-2" style="display: none;">Den grønne vej</button>
+                                    <button class="btn btn-outline-grå text-hvid planet-menu-btn fs-4 mt-2" style="display: none;"><a href="Infografik.html" class="text-hvid">Den grønne vej</a></button>
                                 </li>
                             </ul>
                         </div>
@@ -65,22 +69,22 @@
 </div>
 
 
-<div>
+<header>
     <h1 class="text-orange justify-content-center d-flex" style="margin-top:130px; ">1000</h1>
     <h3 class="text-hvid justify-content-center d-flex">Point</h3>
-</div>
-<div class="planet justify-content-center d-flex align-items-center">
+</header>
+<aside class="planet justify-content-center d-flex align-items-center">
     <video autoplay muted loop id="myVideo">
         <source src="image/plany_4.mp4" type="video/mp4" class="img-fluid">
     </video>
-</div>
+</aside>
 <br>
-<div>
+<footer>
     <div class="d-grid gap-2 col-lg-5 col-md-8 col-sm-8 mx-auto">
 
             <a href="checkliste.html" type="button" class="btn btn-groen text-hvid btn-lg ms-5 me-5 fs-4">Dagens klimamissioner </a>
     </div>
-</div>
+</footer>
 
 <!-- Scripts -->
 <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
