--- a/Planet A.html
+++ b/Planet A.html
@@ -80,12 +80,12 @@
 <footer class="container-fluid">
     <div class="row">
         <div class="col-6">
-            <h6 class="text-hvid mt-3 fw-light">
+            <h6 class="text-hvid fw-light">
                 <a href="" class="data link-underline-hvid text-hvid">Databeskyttelse</a>
             </h6>
         </div>
         <div class="col-6">
-            <h6 class="text-hvid mt-3 fw-light justify-content-end d-flex">
+            <h6 class="text-hvid fw-light justify-content-end d-flex">
                 <a href="" class="Kontakt link-underline-hvid text-hvid">Kontakt</a></h6>
         </div>
     </div>
