--- a/checkliste.html
+++ b/checkliste.html
@@ -51,7 +51,7 @@
                         <li class="nav-item">
                             <a class="nav-link fs-4" href="#">Find venner</a>
                         </li>
-                        <!-- Hjælp din planet knap flyttes dynamisk til dropdown her -->
+
                         <li class="nav-item">
                             <button class="btn btn-outline-grå text-hvid planet-menu-btn fs-4" style="display: none;">Hjælp din planet</button>
                         </li>
@@ -73,23 +73,23 @@
     <div class="container">
         <div class="row align-items-start">
             <!-- Venstre sektion -->
-            <div class="col-md-6 d-flex justify-content-center">
+            <aside class="col-md-6 d-flex justify-content-center">
                 <div class="planet" style="margin-top:70px;">
                     <img src="image/kigned.webp" alt="Billede af en planet" class="img-fluid">
                 </div>
-            </div>
+            </aside>
 
             <!-- Højre sektion -->
             <div class="col-md-6 tekst" style="margin-top:70px;">
                 <!-- Overskrift kort -->
-                <div class="card mb-3 justify-content-center" style="border: none;">
+                <section class="card mb-3 justify-content-center" style="border: none;">
                     <div class="card-body bg-graa">
                         <h4 class="text-center text-hvid">Dagens klimamissioner</h4>
                     </div>
-                </div>
+                </section>
 
                 <!-- Checkliste -->
-                <div class="card " style="border: none;">
+                <article class="card " style="border: none;">
                     <div class="card-body bg-graa">
                         <!-- Klimamissioner -->
                         <ul class="list-group">
@@ -161,7 +161,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </article>
             </div>
         </div>
     </div>
