--- a/Planet A.html
+++ b/Planet A.html
@@ -20,13 +20,13 @@
 
 <div>
 
-<div class="container container-fluid m-0 d-flex">
+<header class="container container-fluid m-0 d-flex">
     <div class="d-flex">
         <a href="Planet%20A.html">
             <img src="image/logo%20h.webp" alt="baggrund" class="img-fluid">
         </a>
     </div>
-</div>
+</header>
 
 
 </div>
@@ -36,7 +36,7 @@
 
 
 <div class="container">
-    <header>
+    <section>
         <div class="row">
             <div class="col-12 overskrift">
                 <h1 class="overskrift text-hvid display-1 d-flex mt-0 mb-3 pt-2" style="font-size: clamp(3rem, 8vw, 25rem);">
@@ -44,7 +44,7 @@
                 </h1>
             </div>
         </div>
-    </header>
+    </section>
 
     <div class="row w-100 justify-content-center">
         <article class="col-12 col-md-8 col-lg-8">
@@ -59,7 +59,7 @@
 
             </h4>
         </article>
-        <section class="col-12 col-md-4 col-lg-4 ">
+        <aside class="col-12 col-md-4 col-lg-4 ">
             <div class="row ">
                 <div class="col-6 col-md-12 text-center">
                     <a href="opret.html">
@@ -72,7 +72,7 @@
                     </a>
                 </div>
             </div>
-        </section>
+        </aside>
     </div>
 
 </div>
