--- a/opret.html
+++ b/opret.html
@@ -18,7 +18,7 @@
 
 <nav class="navbar navbar-expand-lg p-0">
     <div class="container-fluid nav bg-bgfarve p-4">
-        <a class="fa-solid fa-arrow-left fa-2xl arrow link-underline link-underline-opacity-0" href="Planet%20A.html"></a>
+        <a class="fa-solid fa-arrow-left text-orange fs-1 arrow link-underline link-underline-opacity-0" href="Planet%20A.html"></a>
     </div>
 </nav>
 
@@ -26,13 +26,13 @@
 
     <div class="row">
 
-        <div class="d-none d-lg-block col-12 col-lg-6 text-center">
+        <aside class="d-none d-lg-block col-12 col-lg-6 text-center">
 
                 <a href="Planet%20A.html"><img src="image/logoopret.webp" alt="logo" style="width: 500px; height: 563px;"></a>
 
-        </div>
+        </aside>
 
-        <div class="col-12 col-lg-6">
+        <section class="col-12 col-lg-6">
 
             <br>
 
@@ -92,7 +92,7 @@
 
                 </div>
             </div>
-        </div>
+        </section>
     </div>
 </div>
 
