--- a/underside.html
+++ b/underside.html
@@ -69,20 +69,34 @@
 </div>
 
 
-<header>
+<section>
     <h1 class="text-orange justify-content-center d-flex" style="margin-top:130px; ">1000</h1>
     <h3 class="text-hvid justify-content-center d-flex">Point</h3>
-</header>
+</section>
 <aside class="planet justify-content-center d-flex align-items-center">
     <video autoplay muted loop id="myVideo">
         <source src="image/plany_4.mp4" type="video/mp4" class="img-fluid">
     </video>
 </aside>
 <br>
-<footer>
+<div>
     <div class="d-grid gap-2 col-lg-5 col-md-8 col-sm-8 mx-auto">
 
             <a href="checkliste.html" type="button" class="btn btn-groen text-hvid btn-lg ms-5 me-5 fs-4">Dagens klimamissioner </a>
+    </div>
+</div>
+
+<footer class="container-fluid sticky-top">
+    <div class="row">
+        <div class="col-6">
+            <h6 class="text-hvid fw-light">
+                <a href="" class="data link-underline-hvid text-hvid">Databeskyttelse</a>
+            </h6>
+        </div>
+        <div class="col-6">
+            <h6 class="text-hvid fw-light justify-content-end d-flex">
+                <a href="" class="Kontakt link-underline-hvid text-hvid">Kontakt</a></h6>
+        </div>
     </div>
 </footer>
 
