--- a/Infografik.html
+++ b/Infografik.html
@@ -13,7 +13,8 @@
 
     <link rel="stylesheet" href="https://use.typekit.net/fzx5twy.css">
 </head>
-<body class="bg-bgfarve">
+<body class="bg-bgfarve baggrund">
+
 
 
 
