--- a/Planet A.html
+++ b/Planet A.html
@@ -77,7 +77,7 @@
 
 </div>
 
-<footer class="container-fluid sticky-top">
+<footer class="container-fluid">
     <div class="row">
         <div class="col-6">
             <h6 class="text-hvid fw-light">
