--- a/underside.html
+++ b/underside.html
@@ -79,26 +79,14 @@
     </video>
 </aside>
 <br>
-<div>
+<footer>
     <div class="d-grid gap-2 col-lg-5 col-md-8 col-sm-8 mx-auto">
 
             <a href="checkliste.html" type="button" class="btn btn-groen text-hvid btn-lg ms-5 me-5 fs-4">Dagens klimamissioner </a>
     </div>
-</div>
-
-<footer class="container-fluid sticky-top">
-    <div class="row">
-        <div class="col-6">
-            <h6 class="text-hvid fw-light">
-                <a href="" class="data link-underline-hvid text-hvid">Databeskyttelse</a>
-            </h6>
-        </div>
-        <div class="col-6">
-            <h6 class="text-hvid fw-light justify-content-end d-flex">
-                <a href="" class="Kontakt link-underline-hvid text-hvid">Kontakt</a></h6>
-        </div>
-    </div>
 </footer>
+
+
 
 <!-- Scripts -->
 <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
