--- a/Planet A.html
+++ b/Planet A.html
@@ -23,7 +23,7 @@
 <header class="container container-fluid m-0 d-flex">
     <div class="d-flex">
         <a href="Planet%20A.html">
-            <img src="image/logo%20h.webp" alt="baggrund" class="img-fluid">
+            <img src="image/logo%20h.webp" alt="logo" class="img-fluid">
         </a>
     </div>
 </header>
