--- a/Infografik.html
+++ b/Infografik.html
@@ -15,7 +15,7 @@
 </head>
 <body class="bg-bgfarve baggrund">
 
-<img src="image/GoNogo.webp" alt="logo" class="img-fluid">
+<img src="image/GoNogocopy.png" alt="logo" class="img-fluid">
 
 
 
