--- a/Infografik.html
+++ b/Infografik.html
@@ -14,8 +14,9 @@
     <link rel="stylesheet" href="https://use.typekit.net/fzx5twy.css">
 </head>
 <body class="bg-bgfarve baggrund">
-
-<img src="image/GoNogocopy.png" alt="logo" class="img-fluid">
+<div class="justify-content-center d-flex">
+<img src="image/GoNogo%20copy.webp" alt="logo" class="img-fluid">
+</div>
 
 
 
