--- a/Infografik.html
+++ b/Infografik.html
@@ -15,7 +15,7 @@
 </head>
 <body class="bg-bgfarve baggrund">
 <div class="justify-content-center d-flex">
-<img src="image/GoNogo%20copy.webp" alt="logo" class="img-fluid">
+<img src="image/GoNogo900.webp" alt="logo" class="img-fluid">
 </div>
 
 
