--- a/Infografik.html
+++ b/Infografik.html
@@ -6,6 +6,7 @@
     <meta name="robots" content="All">
     <meta name="author" content="Udgiver">
     <meta name="copyright" content="Information om copyright">
+    <script src="https://kit.fontawesome.com/e7994f1c9f.js" crossorigin="anonymous"></script>
 
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 
@@ -14,8 +15,15 @@
     <link rel="stylesheet" href="https://use.typekit.net/fzx5twy.css">
 </head>
 <body class="bg-bgfarve baggrund">
+
+<nav class="navbar navbar-expand-lg p-0">
+    <div class="container-fluid nav p-4">
+        <a class="fa-solid fa-arrow-left text-orange fs-1 arrow link-underline link-underline-opacity-0" href="underside.html"></a>
+    </div>
+</nav>
+
 <div class="justify-content-center d-flex">
-<img src="image/GoNogo900.webp" alt="logo" class="img-fluid">
+<img src="image/GoNogo350%20copy.webp" alt="logo" class="img-fluid">
 </div>
 
 
