--- a/Planet A.html
+++ b/Planet A.html
@@ -40,7 +40,7 @@
         <div class="row">
             <div class="col-12 overskrift">
                 <h1 class="overskrift text-hvid display-1 d-flex mt-0 mb-3 pt-2" style="font-size: clamp(3rem, 8vw, 25rem);">
-                    Velkommen til <br class="d-sm-none"> Planet A
+                    Velkommen til <br class="d-sm-none d-md-none"> Planet A
                 </h1>
             </div>
         </div>
@@ -55,7 +55,9 @@
                 Du får en overskuelig tjekliste med daglige klimamissioner,
                 der gør en forskel i din hverdag og hjælper dig med at blive mere miljøbevidst. Fuldfør missionerne, tjek dem af, optjen point,
                 og se din planet trives som resultat af dine klimavenlige handlinger.<br><br>
-                <a href="image/PlanetAyoutube.mp4" class="Se text-orange">Se vores video</a>
+                <a href="Video.html" class="Se text-orange">Se vores video</a>
+
+
 
             </h4>
         </article>
@@ -79,13 +81,8 @@
 
 <footer class="container-fluid">
     <div class="row">
-        <div class="col-6">
-            <h6 class="text-hvid fw-light">
-                <a href="" class="data link-underline-hvid text-hvid">Databeskyttelse</a>
-            </h6>
-        </div>
-        <div class="col-6">
-            <h6 class="text-hvid fw-light justify-content-end d-flex">
+        <div class="col-12">
+            <h6 class="text-hvid fw-light justify-content-end d-flex mt-3">
                 <a href="" class="Kontakt link-underline-hvid text-hvid">Kontakt</a></h6>
         </div>
     </div>
