--- a/opret.html
+++ b/opret.html
@@ -48,27 +48,18 @@
                     <input type="text" id="inputMail" class="form-control" aria-describedby="passwordHelpBlock">
 
                     <label for="inputUsername" class="form-label text-hvid"><span class="text-orange">*</span>Brugernavn:</label>
-                    <input type="text" id="inputUsername" class="form-control" aria-describedby="passwordHelpBlock">
+                    <input type="text" id="inputUsername" class="form-control mb-4" aria-describedby="passwordHelpBlock">
 
                     <label for="inputPassword" class="form-label text-hvid"><span class="text-orange">*</span>Kodeord:</label>
-                    <input type="password" id="inputPassword" class="form-control" aria-describedby="passwordHelpBlock">
                     <div id="passwordHelpBlock" class="form-text text-hvid">
-                        Kodeord skal indeholde mindst 8 tegn og 1 tal.
+                    Kodeord skal indeholde mindst 8 tegn og 1 tal.
                     </div>
+                    <input type="password" id="inputPassword" class="form-control" aria-describedby="passwordHelpBlock">
+
 
                     <label for="inputRepeat" class="form-label text-hvid"><span class="text-orange">*</span>Gentag kodeord:</label>
                     <input type="password" id="inputRepeat" class="form-control" aria-describedby="passwordHelpBlock">
 
-                    <div class="row">
-                        <div class="col-7 col-md-7 me-2 p-0 ms-3">
-                            <label for="inputCity" class="form-label text-hvid"><span class="text-orange">*</span>By</label>
-                            <input type="text" id="inputCity" class="form-control" aria-describedby="passwordHelpBlock">
-                        </div>
-                        <div class="col-4 col-md-4 m-up-0 p-0">
-                            <label for="inputZip" class="form-label text-hvid"><span class="text-orange">*</span>Postnr.</label>
-                            <input type="text" id="inputZip" class="form-control" aria-describedby="passwordHelpBlock">
-                        </div>
-                    </div>
 
                     <label for="inputPhone" class="form-label text-hvid">Telefonnummer:</label>
                     <input type="text" id="inputPhone" class="form-control" aria-describedby="passwordHelpBlock">
