--- a/checkliste.html
+++ b/checkliste.html
@@ -57,7 +57,7 @@
                         </li>
                         <li class="nav-item">
                             <button class="btn btn-outline-grå text-hvid planet-menu-btn fs-4 mt-2" style="display: none;">
-                                <a href="Infografik.html" class="text-hvid">Den grønne vej</a>
+                                <a href="Infografik.html" class="text-hvid">En bedre vej</a>
                             </button>
                         </li>
                     </ul>
