--- a/underside.html
+++ b/underside.html
@@ -35,12 +35,11 @@
                 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content bg-graa">
-                            <div class="modal-body">
+                            <div class="modal-body d-flex justify-content-center">
                                 <img src="image/GoNogo350.webp">
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuller</button>
-                                <a class="btn btn-blaa" href="underside.html">Fortsæt</a>
+                                <a class="btn btn-groen" href="underside.html">Fortsæt</a>
                             </div>
                         </div>
                     </div>
