--- a/tjekliste.html
+++ b/tjekliste.html
@@ -243,6 +243,30 @@
 </div>
 
 
+
+
+
+
+<div class="modal-header">
+    <h1 class="modal-title fs-5 text-hvid" id="exampleModalnet">Købte ind med eget net</h1>
+    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+</div>
+<div class="modal-body text-hvid">
+    <p>Du kan reducere plastik brug, ved at tage en pose med til at handle ind,
+        eller tag din egen drikkedunk med dig, for at undgå enegangs plastik.</p>
+</div>
+<div class="modal-header">
+    <h1 class="modal-title fs-5 text-hvid" id="exampleModalgik">Jeg gik/cyklede i dag </h1>
+</div>
+<div class="modal-body text-hvid">
+    <p>Hvis det er muligt, bør du overveje at cykle eller gå. Sådan sparer du brændstof og penge,
+        forbedrer dit helbred og gør miljøet en tjeneste</p>
+</div>
+<div class="modal-footer">
+    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuller</button>
+    <a type="button" class="btn btn-blaa" href="underside.html">Fortsæt</a>
+</div>
+
 <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script>
 
