--- a/checkliste.html
+++ b/checkliste.html
@@ -147,13 +147,16 @@
                             </li>
                         </ul>
                         <!-- Færdig-knap -->
-                        <div class="m-3" >
-                            <button type="button" class="btn btn-blaa" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        <div class="m-3">
+                            <button type="button" class="btn btn-blaa" data-bs-toggle="modal" data-bs-target="#exampleModalFardig">
                                 Færdig
                             </button>
-                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal fade" id="exampleModalFardig" tabindex="-1" aria-labelledby="exampleModalFardigLabel" aria-hidden="true">
                                 <div class="modal-dialog modal-dialog-centered">
                                     <div class="modal-content bg-graa">
+                                        <div class="modal-header">
+                                            <h1 class="modal-title fs-3 text-hvid" id="exampleModalTak">Planet A siger tak</h1>
+                                        </div>
                                         <div class="modal-header">
                                             <h1 class="modal-title fs-5 text-hvid" id="exampleModalnet">Købte ind med eget net</h1>
                                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -177,8 +180,11 @@
                                 </div>
                             </div>
                         </div>
+
                     </div>
                 </article>
+            </div>
+
             </div>
         </div>
     </div>
