--- a/checkliste.html
+++ b/checkliste.html
@@ -156,21 +156,28 @@
                                     <div class="modal-content bg-graa">
                                         <div class="modal-header">
                                             <h1 class="modal-title fs-3 text-hvid" id="exampleModalTak">Planet A siger tak</h1>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                         </div>
                                         <div class="modal-header">
                                             <h1 class="modal-title fs-5 text-hvid" id="exampleModalnet">Købte ind med eget net</h1>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+
                                         </div>
                                         <div class="modal-body text-hvid">
-                                            <p>Du kan reducere plastik brug, ved at tage en pose med til at handle ind,
-                                                eller tag din egen drikkedunk med dig, for at undgå enegangs plastik.</p>
+                                            <p>Vil du gerne mindske dit plastik forbrug?
+                                                En simpel måde du kan gøre dette er ved at tage din egen pose med når du handler.
+                                                <br>
+                                                <a href=" https://www.alt.dk/sundhed/klimavenlig-hverdag-29-ting-der-goer-en-forskel/1668235" class="text-orange">Link til side</a>
+                                            </p>
                                         </div>
                                         <div class="modal-header">
                                             <h1 class="modal-title fs-5 text-hvid" id="exampleModalgik">Jeg gik/cyklede i dag </h1>
                                         </div>
                                         <div class="modal-body text-hvid">
-                                            <p>Hvis det er muligt, bør du overveje at cykle eller gå. Sådan sparer du brændstof og penge,
-                                                forbedrer dit helbred og gør miljøet en tjeneste</p>
+                                            <p>Der er mange fordele ved at cykle eller gå. Det er både bedre for helbredet,
+                                                du spare brændstof og penge, og samtidig gør den en stor tjeneste for miljøet.
+                                                <br>
+                                                <a href="https://www.alt.dk/sundhed/klimavenlig-hverdag-29-ting-der-goer-en-forskel/1668235" class="text-orange">Link til side</a>
+                                            </p>
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuller</button>
