--- a/checkliste.html
+++ b/checkliste.html
@@ -20,7 +20,7 @@
 
     <nav class="navbar navbar-dark bg-bgfarve fixed-top" style="border-bottom: 2px solid white;">
         <div class="container-fluid">
-            <a href="#">
+            <a href="underside.html">
                 <img src="image/logolille.webp" alt="logo">
             </a>
 
