--- a/Planet A.html
+++ b/Planet A.html
@@ -53,12 +53,10 @@
                 Planet A giver dig mulighed for at få større viden om hvordan vi kan passe på miljøet.
                 Du får uddelt din egen planet, som du har ansvaret for at gøre grønnere og gladere!<br><br>
                 Du får en overskuelig tjekliste med daglige klimamissioner,
-                der gør en forskel i din hverdag og hjælper dig med at blive mere miljøbevidst. Fuldfør missionerne, tjek dem af, optjen point,
+                der gør en forskel i din hverdag og hjælper dig med at blive mere miljøbevidst.
+                Fuldfør missionerne, tjek dem af, optjen point,
                 og se din planet trives som resultat af dine klimavenlige handlinger.<br><br>
                 <a href="Video.html" class="Se text-orange">Se vores video</a>
-
-
-
             </h4>
         </article>
         <aside class="col-12 col-md-4 col-lg-4 ">
