--- a/underside.html
+++ b/underside.html
@@ -103,10 +103,10 @@
 </aside>
 <br>
 <footer>
-    <div class="d-grid gap-2 col-lg-5 col-md-8 col-sm-8 mx-auto">
-
-            <a href="checkliste.html" type="button" class="btn btn-groen text-hvid btn-lg ms-5 me-5 fs-4">Dagens klimamissioner </a>
+    <div class="button-container">
+        <a href="checkliste.html" class="btn btn-groen text-hvid btn-lg fs-4">Dagens klimamissioner</a>
     </div>
+
 </footer>
 
 
