--- a/checkliste.html
+++ b/checkliste.html
@@ -83,32 +83,32 @@
         </div>
     </nav>
 
-    <!-- Spacing efter navbar -->
+
     <div style="margin-top: 100px;"></div>
 
-    <!-- Indhold -->
+
     <div class="container">
         <div class="row align-items-start">
-            <!-- Venstre sektion -->
+
             <aside class="col-md-6 d-flex justify-content-center">
                 <div class="planet" style="margin-top:70px;">
                     <img src="image/kigned.webp" alt="Billede af en planet" class="img-fluid">
                 </div>
             </aside>
 
-            <!-- Højre sektion -->
+
             <div class="col-md-6 tekst" style="margin-top:70px;">
-                <!-- Overskrift kort -->
+
                 <section class="card mb-3 justify-content-center" style="border: none;">
                     <div class="card-body bg-graa">
                         <h4 class="text-center text-hvid">Dagens klimamissioner</h4>
                     </div>
                 </section>
 
-                <!-- Checkliste -->
+
                 <article class="card " style="border: none;">
                     <div class="card-body bg-graa">
-                        <!-- Klimamissioner -->
+
                         <ul class="list-group">
                             <li class="list-group-item d-flex align-items-start bg-hvid rounded-5"  style="padding: 20px;">
                                 <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="firstCheckbox">
@@ -146,7 +146,7 @@
                                 <span class="badge text-bg-groen rounded-pill">+85</span>
                             </li>
                         </ul>
-                        <!-- Færdig-knap -->
+
                         <div class="m-3">
                             <button type="button" class="btn btn-blaa" data-bs-toggle="modal" data-bs-target="#exampleModalFardig">
                                 Færdig
@@ -203,12 +203,12 @@
 <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script>
 
-    // Initialize the modal with backdrop: false
+
     const myModal = new bootstrap.Modal(document.getElementById('exampleModal'), {
         backdrop: false
     });
 
-    // Later, trigger the modal to open when needed
+
     document.getElementById('openModalButton').addEventListener('click', () => {
         myModal.show();
     });
@@ -216,25 +216,25 @@
 
 
     document.addEventListener("DOMContentLoaded", function () {
-        const planetButton = document.getElementById('planet-btn'); // Knappen i navbaren
-        const offcanvasMenuButton = document.querySelector('.planet-menu-btn'); // Knappen i offcanvas-menuet
+        const planetButton = document.getElementById('planet-btn');
+        const offcanvasMenuButton = document.querySelector('.planet-menu-btn');
         const offcanvasMenu = document.getElementById("offcanvasDarkNavbar");
 
         const handleScreenSizeChange = () => {
             if (window.innerWidth <= 500) {
-                // Skift knappen fra navbar til offcanvas
+
                 if (planetButton && offcanvasMenuButton) {
                     planetButton.style.display = "none";
                     offcanvasMenuButton.style.display = "block";
                 }
             } else {
-                // Flyt knap tilbage til navbar
+
                 planetButton.style.display = "block";
                 offcanvasMenuButton.style.display = "none";
             }
         };
 
-        // Håndter skærmstørrelse ved indlæsning og resize
+
         handleScreenSizeChange();
         window.addEventListener("resize", handleScreenSizeChange);
     });
