--- a/checkliste.html
+++ b/checkliste.html
@@ -36,7 +36,7 @@
                                 <img src="image/GoNogo350.webp">
                             </div>
                             <div class="modal-footer">
-                                <a class="btn btn-groen" href="checkliste.html">Fortsæt</a>
+                                <a class="btn btn-hvid" href="checkliste.html">Fortsæt</a>
                             </div>
                         </div>
                     </div>
