--- a/underside.html
+++ b/underside.html
@@ -39,7 +39,7 @@
                                 <img src="image/GoNogo350.webp">
                             </div>
                             <div class="modal-footer">
-                                <a class="btn btn-groen" href="underside.html">Fortsæt</a>
+                                <a class="btn btn-hvid" href="underside.html">Fortsæt</a>
                             </div>
                         </div>
                     </div>
@@ -104,7 +104,7 @@
 <br>
 <footer>
     <div class="button-container">
-        <a href="checkliste.html" class="btn btn-groen text-hvid btn-lg fs-4">Dagens klimamissioner</a>
+        <a href="checkliste.html" class="btn btn1 btn-groen text-hvid btn-lg fs-4">Dagens klimamissioner</a>
     </div>
 
 </footer>
