--- a/underside.html
+++ b/underside.html
@@ -39,7 +39,7 @@
                                 <img src="image/GoNogo350.webp">
                             </div>
                             <div class="modal-footer">
-                                <a class="btn btn-hvid" href="underside.html">Fortsæt</a>
+                                <a class="btn2 btn-hvid" href="underside.html">Fortsæt</a>
                             </div>
                         </div>
                     </div>
