--- a/underside.html
+++ b/underside.html
@@ -36,10 +36,10 @@
                     <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content bg-graa">
                             <div class="modal-body d-flex justify-content-center">
-                                <img src="image/GoNogo350.webp">
+                                <img src="image/Infografik%20m%20tekst%20copy.png">
                             </div>
                             <div class="modal-footer">
-                                <a class="btn2 btn-hvid" href="underside.html">Fortsæt</a>
+                                <a class="btn btn-hvid" href="underside.html">Fortsæt</a>
                             </div>
                         </div>
                     </div>
@@ -93,7 +93,7 @@
 
 
 <section>
-    <h1 class="text-orange justify-content-center d-flex" style="margin-top:130px; ">1000</h1>
+    <h1 class="text-orange justify-content-center d-flex" style="margin-top:115px; ">1000</h1>
     <h3 class="text-hvid justify-content-center d-flex">Point</h3>
 </section>
 <aside class="planet justify-content-center d-flex align-items-center">
@@ -104,7 +104,7 @@
 <br>
 <footer>
     <div class="button-container">
-        <a href="checkliste.html" class="btn btn1 btn-groen text-hvid btn-lg fs-4">Dagens klimamissioner</a>
+        <a href="checkliste.html" class="btn btn1 btn-groen text-hvid btn-lg fs-4 mt-0 mb-2">Dagens klimamissioner</a>
     </div>
 
 </footer>
