--- a/underside.html
+++ b/underside.html
@@ -36,7 +36,7 @@
                     <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content bg-graa">
                             <div class="modal-body d-flex justify-content-center">
-                                <img src="image/Infografik%20m%20tekst%20copy.png">
+                                <img src="image/Infografik.webp">
                             </div>
                             <div class="modal-footer">
                                 <a class="btn btn-hvid" href="underside.html">Fortsæt</a>
