--- a/underside.html
+++ b/underside.html
@@ -35,8 +35,8 @@
                 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content bg-graa">
-                            <div class="modal-body d-flex justify-content-center">
-                                <img src="image/Infografik.webp">
+                            <div class="modal-body d-flex justify-content-center " style="border-radius: 5%">
+                                <img src="image/Infografik.webp" class="bordered-image" style="border-radius: 5%;">
                             </div>
                             <div class="modal-footer">
                                 <a class="btn btn-hvid" href="underside.html">Fortsæt</a>
