--- a/underside.html
+++ b/underside.html
@@ -36,7 +36,7 @@
                     <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content bg-graa">
                             <div class="modal-body d-flex justify-content-center " style="border-radius: 5%">
-                                <img src="image/Infografik.webp" class="bordered-image" style="border-radius: 5%;">
+                                <img src="image/Infografik.png" class="bordered-image" style="border-radius: 5%;">
                             </div>
                             <div class="modal-footer">
                                 <a class="btn btn-hvid" href="underside.html">Fortsæt</a>
