--- a/opret.html
+++ b/opret.html
@@ -38,7 +38,7 @@
 
             <div>
                 <div>
-                    <h1 class="text-hvid">Opret bruger</h1>
+                    <h1 class="text-hvid">Opret profil</h1>
                 </div>
 
                 <br>
