--- a/Planet A.html
+++ b/Planet A.html
@@ -63,7 +63,7 @@
             <div class="row ">
                 <div class="col-6 col-md-12 text-center">
                     <a href="opret.html">
-                        <button class="btn btn-groen text-hvid fs-4 ps-lg-4 pe-lg-4 pt-lg-3 pb-lg-3 ps-md-3 pe-md-3 pt-md-3 pb-md-3 mb-md-5 m-sm-4 m-2" type="button">Opret Profil</button>
+                        <button class="btn btn-groen text-hvid fs-4 ps-lg-4 pe-lg-4 pt-lg-3 pb-lg-3 ps-md-3 pe-md-3 pt-md-3 pb-md-3 mb-md-5 m-sm-4 m-2" type="button">Opret profil</button>
                     </a>
                 </div>
                 <div class="col-6 col-md-12 text-center">
