--- a/checkliste.html
+++ b/checkliste.html
@@ -33,7 +33,7 @@
                     <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content bg-graa">
                             <div class="modal-body d-flex justify-content-center">
-                                <img src="image/Infografik.png" class="bordered-image" style="border-radius: 5%;">
+                                <img src="image/Infografik.png" alt="infografik" class="bordered-image" style="border-radius: 5%;">
                             </div>
                             <div class="modal-footer">
                                 <a class="btn btn-hvid" href="checkliste.html">Fortsæt</a>
