--- a/underside.html
+++ b/underside.html
@@ -36,7 +36,7 @@
                     <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content bg-graa">
                             <div class="modal-body d-flex justify-content-center" >
-                                <img src="image/Infografik.png" class="bordered-image" style="border-radius: 5%;">
+                                <img src="image/Infografik.png" alt="infografik" class="bordered-image" style="border-radius: 5%;">
                             </div>
                             <div class="modal-footer">
                                 <a class="btn btn-hvid" href="underside.html">Fortsæt</a>
@@ -75,7 +75,7 @@
                                 <li class="nav-item">
                                     <a class="nav-link fs-4" href="#">Find venner</a>
                                 </li>
-                                <!-- Hjælp din planet knap flyttes dynamisk til dropdown her -->
+
                                 <li class="nav-item">
                                     <button class="btn btn-outline-grå text-hvid planet-menu-btn fs-4" style="display: none;">Hjælp din planet</button>
                                 </li>
